app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-pod
  labels:
    app: wil
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil
  template:
    metadata:
      labels:
        app: wil
    spec:
      containers:
      - name: wil
        image: wil42/playground:v1
        ports:
        - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: wil-service
spec:
  selector: 
    app: wil
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
